<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="div">÷</string>
    <string name="del">⌫</string>
    <string name="x">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="plus_or_minus">+/-</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="eq">=</string>
    <string name="theme_green">ThemeGreen</string>
    <string name="theme_default">ThemeDefault</string>
    <string name="theme_red">ThemeRed</string>
    <string name="settings">Настройки</string>
    <string name="start_app">Запустить приложение</string>
</resources>