<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_back"
    android:gravity="bottom">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="@dimen/radio_group_margin_bottom">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_default"
            android:textColor="@color/white"
            android:textSize="@dimen/theme_text_size" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_green"
            android:textColor="@color/white"
            android:textSize="@dimen/theme_text_size" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_red"
            android:textColor="@color/white"
            android:textSize="@dimen/theme_text_size" />


    </RadioGroup>


    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/textView_text_size" />


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/strip_color" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/c"
            android:textColor="#FF8A65"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/percent"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/div"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/del"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/x"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size"

            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/minus"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/plus"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlusOrMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/plus_or_minus"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/point"
            android:textColor="@color/actions_button_text_color"
            android:textSize="@dimen/button_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/actions_button_text_color"
            android:text="@string/eq"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />


    </TableRow>


</TableLayout>